--- a/src/style.scss
+++ b/src/style.scss
@@ -72,6 +72,7 @@
             .container{
                 padding: 10px 0px;
                 display: flex;
+                align-items: center;
                 justify-content: space-between;
                 .logo{
                     img{
@@ -81,13 +82,146 @@
                 }
                 .links{
                     display: flex;
+                    align-items: center;
                     gap: 10px;
+                }
 
+                h6{
+                    font-size: 16px;
+                    font-weight: 300;
+                }
+
+                span{
+                    cursor: pointer;
+                }
+
+                .write{
+                    background-color:#d6b9e7;
+                    width: 60px;
+                    height: 40px;
+                    border-radius: 80%;
+                    display:flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: 300;
+                    border: 1px solid white;
+                    
+                    &:hover{
+                        color: #833e94;
+                        background-color: white;
+                        border: 1px solid #833e94;
+                    }
+                    
                 }
             }
 
         }
+
+        //FOOTER
+
+        footer{
+            margin-top: 100px;
+            padding: 20px;
+            background-color: #d6b9e7;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            img{
+                height: 50px;
+            }
+        }
+
+        //HOME
+
+        .home{
+
+            .posts{
+                margin-top: 50px;
+                display:flex;
+                flex-direction: column;
+                gap:150px;
+        
+                .post{
+                    display: flex;
+                    gap: 100px;
+
+                    &:nth-child(2n+1){
+                        flex-direction: row-reverse;
+                    }
+
+
+        
+                    .img{
+                        flex: 2;  
+                        position: relative;
+
+                        &::after{
+                            content: "";
+                            width: 100%;
+                            height: 100%;
+                            background-color: #d6b9e7;
+                            position: absolute;
+                            top: 20px;
+                            left: -20px;
+                            z-index: -1 ;
+                            
+
+                        }
+
+                        img{
+                            width: 100%;
+                            max-height: 400px;
+                            object-fit: cover;
+
+                        }                                            
+                    }
+                    .content{
+                        flex: 3;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                        h1{
+                            font-size: 48px;
+                        }
+
+                        p{
+                            font-size: 18px;
+                        }
+
+                        button{
+                            width: max-content;
+                            padding: 10px 20px;
+                            border: none;
+                            cursor: pointer;
+                            background-color: white;
+                            border: 1px solid #833e94;
+                            color: #833e94;
+
+                            &:hover{
+                                border: 1px solid white;
+                                background-color: #d6b9e7;
+                                color: black;
+                            }
+                        }
+                    }
+
+                    
+                }
+
+            }
+
+        }
+
+                    
+
+        
+
+
+
      }
     
  }
+ 
  
