--- a/src/style.scss
+++ b/src/style.scss
@@ -226,11 +226,11 @@
                 flex-direction: column;
                 gap: 30px;
 
-                //diferente
+                //DIFERENTE
 
                 img{
                     width: 700px;
-                    height: 200px;
+                    height: 400px;
                     object-fit: cover;
                 }
 
@@ -293,9 +293,11 @@
                 flex-direction: column;
                 gap: 10px ;
 
+                //DIFERENTE
+
                 img{
                     width: 300px;
-                    height: 100px;
+                    height: 200px;
                     object-fit: cover;
                 }
 
@@ -305,7 +307,7 @@
 
                 button{
                     width: max-content;
-                    padding: 7.5px 15px;
+                    padding: 7.5px 20px;
                     border: none;
                     cursor: pointer;
                     background-color: white;
@@ -326,6 +328,97 @@
 
         
         }
+
+        //WRITE
+        
+        .add{
+            margin-top: 20px;
+            display: flex;
+            gap: 20px;
+
+            .content{
+                flex:5;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                input{
+                    padding: 10px;
+                    border: 1px solid #d6b9e7;
+                }
+
+                .editorContainer{
+                    height: 300px;
+                    overflow: scroll;
+                    border: 1px solid #d6b9e7;
+
+                    .editor{
+                        height: 100%;
+                        border: none;
+                    }
+                }
+            }
+
+            .menu{
+                
+                flex: 2;
+                display: flex;
+                flex-direction:column;                
+                gap: 20px;
+
+                .item{                 
+                    
+                    border: 1px solid #d6b9e7;
+                    padding: 10px;
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    font-size: 12px;  
+                    color: #333;  
+
+                    h1{
+                        font-size: 20px;
+                    }
+
+                    //no me aparece la linea
+
+                    .file{
+                        text-decoration: underline;
+                        cursor: pointer;
+                    }                       
+                        
+
+                    .buttons{
+                        display: flex;
+                        justify-content: space-between;
+
+                        :first-child{
+                            cursor: pointer;
+                            color: #833e94;
+                            background-color: white;
+                            border: 1px solid  #833e94;
+                            padding: 3px 5px;
+                        }
+                        :last-child{
+                            cursor: pointer;
+                            color: white;
+                            background-color: #833e94;
+                            border: 1px solid  white;
+                            padding: 3px 5px;
+                        }
+                    }
+                    
+                    .cat{
+                        display: flex;
+                        align-items: center;
+                        gap:2px;
+                        color: #833e94;
+                    }
+
+                }
+            }
+        }
                   
 
         
@@ -339,4 +432,3 @@
  
 
 
- 
